Add Windows ARM64 build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,11 @@ jobs:
             args: --target x86_64-apple-darwin
             name: macOS-Intel
           - platform: windows-latest
-            args: ''
-            name: Windows
+            args: --target x86_64-pc-windows-msvc
+            name: Windows-x64
+          - platform: windows-latest
+            args: --target aarch64-pc-windows-msvc
+            name: Windows-ARM64
           - platform: ubuntu-22.04
             args: ''
             name: Linux
@@ -40,7 +43,7 @@ jobs:
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || (matrix.platform == 'windows-latest' && 'x86_64-pc-windows-msvc,aarch64-pc-windows-msvc') || '' }}
 
       - name: Install Linux dependencies
         if: matrix.platform == 'ubuntu-22.04'
