--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
+      - name: Install Windows ARM64 build tools
+        if: matrix.name == 'Windows-ARM64'
+        run: |
+          # Install ARM64 MSVC build tools for cross-compilation
+          $installerPath = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vs_installer.exe"
+          & $installerPath modify --installPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise" `
+            --add Microsoft.VisualStudio.Component.VC.Tools.ARM64 `
+            --add Microsoft.VisualStudio.Component.VC.Runtimes.ARM64.Spectre `
+            --quiet --norestart --wait
+        shell: pwsh
+
       - name: Install dependencies
         run: npm ci
 
