--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,6 +13,7 @@ tauri = { version = "1.8", features = ["dialog-open", "fs-read-file", "path-all"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 opener = { version = "0.7", features = ["reveal"] }
+trash = "4.0"
 
 [features]
 default = ["custom-protocol"]
